--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "teste-back-end",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "jest"
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
     "jest": "^29.7.0"
   }
 }
